--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mobx": "^6.13.5",
     "mobx-react-lite": "^4.1.0",
     "next": "15.1.2",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
